# arcade-ai-amog

./: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml  report.md
cli/: __init__.py  commands.py
docs/: challenge_v1.md  challenge_v2.md  challenge_v3.md  openai_api_docs.md
flow_types/: __init__.py  api_models.py  chunk_models.py  flow_types.py
prompts/: generate_image.txt  generate_summary.txt  identify_interactions.txt
scripts/: format.sh  lint.sh
services/: __init__.py  ai_service.py  flow_service.py  image_utils.py  report_service.py
